# disked

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build.sh  disk.sh
src/: backend-interface.c  backend-interface.cpp  disks.h  disks.hpp  manage-disk.c  manage-disk.cpp  manage-disk.hpp
